<resources>
    <string name="app_name" translatable="false">Readability</string>

    <string name="btn_get_started">Get Started</string>
    <string name="btn_pair_select_no">No, I don\'t own one.</string>
    <string name="btn_pair_select_yes">Yes, let\'s do it!</string>
    <string name="btn_next">Next</string>

    <string name="btn_previous_description">Previous slide</string>
    <string name="btn_next_description">Next slide</string>

    <string name="setup_screen_1_p1_imgDescription">Readability logo</string>
    <string name="setup_screen_1_p1_heading">Welcome to Readability</string>
    <string name="setup_screen_1_p1_bodyText">Readability is the app that enables the visually impaired to access and interact with printed documents in several easy-to-use ways.</string>

    <string name="setup_screen_1_p2_imgDescription">Illustration of an phone capturing a text document</string>
    <string name="setup_screen_1_p2_heading">Scan papers with a snap</string>
    <string name="setup_screen_1_p2_bodyText">As easy as just pointing and shooting. Тhe build-in AI will convert your captured document to plain text. No difficult setup required.</string>

    <string name="setup_screen_1_p3_imgDescription">Illustration of speech coming out of a headphone</string>
    <string name="setup_screen_1_p3_heading">Have the text read to you</string>
    <string name="setup_screen_1_p3_bodyText">After the conversion of the document to text, you can easily have it read-back to you in a voice of your choice. Later in this setup you will have the opportunity to configure this functionality.</string>

    <string name="setup_screen_1_p4_imgDescription">Illustration of a "Braille Reader"</string>
    <string name="setup_screen_1_p4_heading">Pair with a "Braille Reader"</string>
    <string name="setup_screen_1_p4_bodyText">A "Braille Reader" is a device that can convert the captured text to mechanical braille dots. Such a tool could be paired with Bluetooth.</string>

    <string name="setup_screen_1_p5_imgDescription">Illustration of a setup wrench</string>
    <string name="setup_screen_1_p5_heading">So let\'s get ut setup</string>
    <string name="setup_screen_1_p5_bodyText">So what are we waiting for? Let\'s configure the app so it can be used.</string>

    <string name="setup_screen_2_p1_imgDescription">Illustration of a Braille Reader with a plus</string>
    <string name="setup_screen_2_p1_heading">Do you want to connect a Braille Reader?</string>
    <string name="setup_screen_2_p1_bodyText">Readability is the app that enables the visually impaired to access and interact with printed documents in several easy-to-use ways.</string>

    <string name="setup_screen_2_p2_imgDescription">Illustration of a Braille Reader with a Bluetooth icon</string>
    <string name="setup_screen_2_p2_heading">Изберете Вашето устройство</string>

    <string name="setup_screen_2_p3_imgDescription">Illustration of a Braille Reader wit a tick</string>
    <string name="setup_screen_2_p3_heading">Device connected successfully!</string>
    <string name="setup_screen_2_p3_bodyText">Congratulations, now you can you the device with this app!</string>

    <string name="setup_screen_3_imgDescription">Illustration of speech coming out of a headphone</string>
    <string name="setup_screen_3_heading">Select a narration voice</string>
    <string name="setup_screen_3_bodyText">This voice will be used for reading documents out-loud.</string>

    <string name="setup_screen_4_imgDescription">Illustration of a tick</string>
    <string name="setup_screen_4_heading">You\'re all set!</string>
    <string name="setup_screen_4_bodyText">Readability has been successfully configured for use. Now the app will enter gesture navigated mode. Hope you enjoy your time using Readability!</string>
    <string name="btn_return">Return</string>
    <string name="open_document_heading">Sooo sorry but this screen is currently unavailable ;-;</string>
    <string name="open_document_body">But heads up, this feature will be comming in shortly</string>
    <string name="main_scan">Scan</string>
    <string name="main_open">Open</string>
    <string name="main_open_imgDescription">Illustration of a folder</string>
    <string name="main_scan_imgDescription">Scan</string>


</resources>
